fixed  cut off ending

--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -53,10 +53,6 @@ $icon-font-path: "../../bower_components/bootstrap-sass-official/assets/fonts/bo
   font-style: italic;
 }
 
-body {
-  margin-bottom: 100px;
-}
-
 /**
  *  Do not remove this comments bellow. It's the markers used by gulp-inject to inject
  *  all your sass files automatically
